--- a/week01/index.html
+++ b/week01/index.html
@@ -24,25 +24,21 @@
         </nav>
         <main>
             <section class="card">
-                <div id="aboutmecard">
                 <h2>About Me</h2>
-                <p id="aboutme">
+                <p><img id="aboutmeimg" src="images/Jeremy-Fam.jpg" alt="my-fam">
                     My name is Jeremy and I am currently studying Web Design and 
                     Development with an empasis in design. I enjoy watching sports games, 
                     mainly football and some basketball. I like playing video games when I 
                     can and spend family time with my wife and kids.
                 </p>
-                <p id="aboutme">
+                <p>
                     I started an online business from a previous class last semester. 
                     It was interesting to learn about starting. It's a drop shipping 
                     company where I create designs for t-shirts. If you'd like to check 
                     it out, you can go to <a href="https://www.thesethetees.com/" target="_blank">thesethetees.com.</a>
                 </p>
-                <img id="aboutmeimg" src="images/Jeremy-Fam.jpg" alt="my-fam">
-                </div>
             </section>
             <section class="card">
-                <div id="webdevcard">
                 <h2>Web Dev Resources</h2>
                 <ul>
                     <li><a href="https://developer.mozilla.org/en-US/" target="_blank">Recource for Developers</a></li>
@@ -50,7 +46,6 @@
                     <li><a href="https://coolors.co/" target="_blank">Coolers</a></li>
                     <li><a href="https://csszengarden.com/" target="_blank">CSS Zen Garden</a></li>
                 </ul>
-                </div>
             </section>
         </main>
         <footer class="footer">
